--- a/index.html
+++ b/index.html
@@ -1,13 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta charset="utf-8">
-		<title>Scout - Sass without all the hassle</title>
-		<link rel="stylesheet" href="_styles/style.css">
-		<script src="_scripts/main.js"></script>
-	</head>
-	<body>
+    <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />    <!-- Must be first item in <Head> -->
+    <title>Scout - Sass without all the hassle</title>
+    <meta charset="UTF-8"                                                                                  />
+    <meta name="description"                     content="Scout-App, the easiest way to use Sass!"         />
+    <meta name="keywords"                        content="Scout, Scout-App, scoutapp, scout app, Sass, scss, css, preprocessor, GUI, styles, front-end, web design, web development tools, free, open source"/>
+    <meta http-equiv="Expires"                   content="0"                                               />
+    <meta name="viewport"                        content="width=device-width, initial-scale=1.0"           />
+    <meta name="subject"                         content="Homepage for Scout-App"                          />
+    <meta name="copyright"                       content="Mutually Human"                                  />
+    <meta name="language"                        content="EN"                                              />
+    <meta name="robots"                          content="index,follow"                                    />
+    <meta name="author"                          content="The Jared Wilcurt"                               />
+    <meta name="designer"                        content=""                                                />
+    <meta name="owner"                           content="Mutually Human"                                  />
+    <meta name="rating"                          content="General"                                         />
+    <meta name="HandheldFriendly"                content="True"                                            />
+    <meta name="application-name"                content="Scout-App"                                       />
+    <meta http-equiv="cleartype"                 content="on"                                              />
+    <meta name="msapplication-navbutton-color"   content="#FFFFFF"                                         />
+    <meta name="msapplication-TileColor"         content="#FFFFFF"                                         />
+    <meta name="msapplication-square70x70logo"   content="_img/meta/mstile01sm.png"                        />
+    <meta name="msapplication-square150x150logo" content="_img/meta/mstile02md.png"                        />
+    <meta name="msapplication-wide310x150logo"   content="_img/meta/mstile03wd.png"                        />
+    <meta name="msapplication-square310x310logo" content="_img/meta/mstile04lg.png"                        />
+    <meta name="apple-mobile-web-app-title"      content="Scout-App"                                       />
+    <meta name="apple-mobile-web-app-capable"    content="yes"   /> <!-- "yes" hides Safari navbar in iOS -->
+    <meta name="apple-touch-fullscreen"          content="yes"                                             />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"                                     />
+    <link rel="apple-touch-icon"             href="_img/meta/apl-57.png"  type="image/png" sizes="57x57"   />
+    <link rel="apple-touch-icon-precomposed" href="_img/meta/apl-57.png"  type="image/png" sizes="57x57"   />
+    <link rel="apple-touch-icon"             href="_img/meta/apl-72.png"  type="image/png" sizes="72x72"   />
+    <link rel="apple-touch-icon-precomposed" href="_img/meta/apl-72.png"  type="image/png" sizes="72x72"   />
+    <link rel="apple-touch-icon"             href="_img/meta/apl-114.png" type="image/png" sizes="114x114" />
+    <link rel="apple-touch-icon-precomposed" href="_img/meta/apl-114.png" type="image/png" sizes="114x114" />
+    <link rel="apple-touch-icon"             href="_img/meta/apl-144.png" type="image/png" sizes="144x144" />
+    <link rel="apple-touch-icon-precomposed" href="_img/meta/apl-144.png" type="image/png" sizes="144x144" />
+    <link rel="apple-touch-startup-image"    href="_img/meta/apl-str.png" type="image/png"                 />
+    <link rel="fluid-icon"                   href="_img/meta/fluid.png"   type="image/png"                 />
+    <link rel="icon"                         href="favicon.ico"           type="image/x-icon"              />
+    <link rel="shortcut icon"                href="favicon.ico"           type="image/ico"                 />
+    <link rel="stylesheet"                   href="_styles/style.css"     type="text/css"                  />
 
-	</body>
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+    <script type="text/javascript">
+    if (typeof jQuery == 'undefined') {
+          document.write(unescape("%3Cscript src='_scripts/jquery-2.2.3.min.js' type='text/javascript'%3E%3C/script%3E"));
+      }
+    </script> <!-- Load local jQuery if Google CDN is unreachable -->
+</head>
+<body>
+    <h1>Scout-App</h1>
+
+    <div id="data"></div>
+
+    <script src="_scripts/main.js"></script>
+</body>
 </html>
