--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@
 </head>
 <body>
     <h1>Scout-App</h1>
-
-    <div id="data"></div>
-
+    <div id="data">
+    	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 32-Bit</a>
+    	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 64-Bit</a>
+    	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download OSX</a>
+    	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Windows</a>
+    </div>
     <script src="_scripts/main.js"></script>
 </body>
 </html>
