updated index.html and readme.md

--- a/index.html
+++ b/index.html
@@ -55,13 +55,24 @@
     </script> <!-- Load local jQuery if Google CDN is unreachable -->
 </head>
 <body>
-    <h1>Scout-App</h1>
-    <div id="data">
-    	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 32-Bit</a>
-    	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 64-Bit</a>
-    	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download OSX</a>
-    	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Windows</a>
-    </div>
+    <header>
+        <img src="_img/logo.png" alt="Scout-App Logo" />
+    </header>
+    <main>
+        <div id="data">
+        	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 32-Bit</a>
+        	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 64-Bit</a>
+        	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download OSX</a>
+        	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Windows</a>
+        </div>
+    </main>
+    <footer>
+        Alternate Downloads
+        Report Bugs
+        Request Features
+        Translate Scout-App
+        Create a Theme
+    </footer>
     <script src="_scripts/main.js"></script>
 </body>
 </html>
