Organize Sass a little

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <img src="_img/logo.png" alt="Scout-App Logo" />
     </header>
     <main>
-        <div id="data">
+        <div id="downloads">
         	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 32-Bit</a>
         	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 64-Bit</a>
         	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download OSX</a>
