--- a/index.html
+++ b/index.html
@@ -67,11 +67,20 @@
         </div>
     </main>
     <footer>
-        Alternate Downloads
-        Report Bugs
-        Request Features
-        Translate Scout-App
-        Create a Theme
+        <div>
+            <h3>Lorem ipsum</h3>
+            <a href="#">Alternate Downloads</a>
+            <a href="#">Support Chat</a>
+        </div>
+        <div>
+            <h3>Contribute</h3>
+            <a href="#">Translate Scout-App</a>
+            <a href="#">Create a Theme</a>
+            <a href="#">Report Bugs</a>
+            <a href="#">Request Features</a>
+            <a href="#">Fix Existing Bugs</a>
+            <a href="#">Work on features that are on the roadmap</a>
+        </div>
     </footer>
     <script src="_scripts/main.js"></script>
 </body>
