--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <link rel="fluid-icon"                   href="_img/meta/fluid.png"   type="image/png"                 />
     <link rel="icon"                         href="favicon.ico"           type="image/x-icon"              />
     <link rel="shortcut icon"                href="favicon.ico"           type="image/ico"                 />
-    <link rel="stylesheet"                   href="_styles/style.css"     type="text/css"                  />
+    <link rel="stylesheet"                   href="_styles/style.min.css" type="text/css"                  />
 
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -55,33 +55,7 @@
     </script> <!-- Load local jQuery if Google CDN is unreachable -->
 </head>
 <body>
-    <header>
-        <img src="_img/logo.png" alt="Scout-App Logo" />
-    </header>
-    <main>
-        <div id="downloads">
-        	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 32-Bit</a>
-        	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 64-Bit</a>
-        	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download OSX</a>
-        	<a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Windows</a>
-        </div>
-    </main>
-    <footer>
-        <div>
-            <h3>Lorem ipsum</h3>
-            <a href="#">Alternate Downloads</a>
-            <a href="#">Support Chat</a>
-        </div>
-        <div>
-            <h3>Contribute</h3>
-            <a href="#">Translate Scout-App</a>
-            <a href="#">Create a Theme</a>
-            <a href="#">Report Bugs</a>
-            <a href="#">Request Features</a>
-            <a href="#">Fix Existing Bugs</a>
-            <a href="#">Work on features that are on the roadmap</a>
-        </div>
-    </footer>
+    <h1>Scout-App 2</h1>
     <script src="_scripts/main.js"></script>
 </body>
 </html>
