Added new logo graphics (compressed)

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     </script> <!-- Load local jQuery if Google CDN is unreachable -->
 </head>
 <body>
+    <img src="_img/wordmark.png" alt="Scout-App 2 Logo" />
     <h1>Scout-App 2</h1>
     <script src="_scripts/main.js"></script>
 </body>
