--- a/index.html
+++ b/index.html
@@ -55,8 +55,37 @@
     </script> <!-- Load local jQuery if Google CDN is unreachable -->
 </head>
 <body>
-    <img src="_img/wordmark.png" alt="Scout-App 2 Logo" />
-    <h1>Scout-App 2</h1>
+    <header>
+        <img src="_img/wordmark.png" alt="Scout-App 2 Logo" />
+        <h1>Scout-App 2</h1>
+    </header>
+    <main>
+        <div id="downloads">
+            <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 32-Bit</a>
+            <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 64-Bit</a>
+            <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download OSX</a>
+            <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Windows</a>
+        </div>
+    </main>
+    <footer>
+        <div>
+            <h3>Additional Links</h3>
+            <a href="#">Alternate Downloads</a>
+            <a href="#">Support Chat</a>
+        </div>
+        <div>
+            <h3>Ideas and Issues</h3>
+            <a href="#">Report Bugs</a>
+            <a href="#">Request Features</a>
+        </div>
+        <div>
+            <h3>Contribute</h3>
+            <a href="#">Translate Scout-App</a>
+            <a href="https://www.youtube.com/watch?v=DtEVIDvBrSI" target="_blank">Create a Theme</a>
+            <a href="#">Fix Existing Bugs</a>
+            <a href="#">Work on features that are on the roadmap</a>
+        </div>
+    </footer>
     <script src="_scripts/main.js"></script>
 </body>
 </html>
