Updated page layout, styles, and content

--- a/index.html
+++ b/index.html
@@ -57,15 +57,23 @@
 <body>
     <header>
         <img src="_img/wordmark.png" alt="Scout-App 2 Logo" />
-        <h1>Scout-App 2</h1>
     </header>
     <main>
-        <div id="downloads">
-            <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 32-Bit</a>
-            <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 64-Bit</a>
-            <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download OSX</a>
-            <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Windows</a>
-        </div>
+        <section>
+            <div class="half">
+                <h1>Sass for Web Designers</h1>
+                <div id="downloads">
+                    <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 32-Bit</a>
+                    <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 64-Bit</a>
+                    <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download OSX</a>
+                    <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Windows</a>
+                </div>
+            </div>
+            <div class="half">
+                <!-- Placeholder video -->
+                <iframe src="https://www.youtube-nocookie.com/embed/DtEVIDvBrSI?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </section>
     </main>
     <footer>
         <div>
