Improve media queries

--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@
             <div class="half">
                 <h1>Sass for Web Designers</h1>
                 <div id="downloads">
-                    <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 32-Bit</a>
-                    <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 64-Bit</a>
-                    <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download OSX</a>
-                    <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Windows</a>
+                    <div class="half">
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 32-Bit</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 64-Bit</a>
+                    </div>
+                    <div class="half">
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download OSX</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Windows</a>
+                    </div>
                 </div>
             </div>
             <div class="half">
