--- a/index.html
+++ b/index.html
@@ -62,40 +62,43 @@
         <section>
             <div class="half">
                 <h1>Sass for Web Designers</h1>
+                <hr />
                 <div id="downloads">
+                    <h3>Downloads</h3>
                     <div class="half">
-                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 32-Bit</a>
-                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Linux 64-Bit</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Linux 32-Bit</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Linux 64-Bit</a>
                     </div>
                     <div class="half">
-                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download OSX</a>
-                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Download Windows</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases">OSX</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Windows</a>
                     </div>
                 </div>
             </div>
             <div class="half">
                 <!-- Placeholder video -->
-                <iframe src="https://www.youtube-nocookie.com/embed/DtEVIDvBrSI?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/NpEaa2P7qZI?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </section>
     </main>
     <footer>
         <div>
             <h3>Additional Links</h3>
-            <a href="#">Alternate Downloads</a>
-            <a href="#">Support Chat</a>
+            <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Alternate Downloads</a>
+            <a href="https://gitter.im/TheJaredWilcurt/scout-app">Support Chat</a>
+            <a href="https://github.com/TheJaredWilcurt/scout-app">GitHub</a>
         </div>
         <div>
             <h3>Ideas and Issues</h3>
-            <a href="#">Report Bugs</a>
-            <a href="#">Request Features</a>
+            <a href="https://github.com/mhs/scout-app/issues/new?title=SA2%20-%20&body=OS%3A%20%0DInformation%20from%20Dev%20Tools%3A%20%0D%0D%28Attach%20screenshot%20below%29">Report Bugs</a>
+            <a href="https://github.com/mhs/scout-app/issues/new?title=SA2%20Feature%20Request%20-%20">Request Features</a>
         </div>
         <div>
             <h3>Contribute</h3>
-            <a href="#">Translate Scout-App</a>
+            <a href="https://github.com/TheJaredWilcurt/scout-app/blob/Scout-App-2-Dev/documentation/translate-scout.md">Translate Scout-App</a>
             <a href="https://www.youtube.com/watch?v=DtEVIDvBrSI" target="_blank">Create a Theme</a>
-            <a href="#">Fix Existing Bugs</a>
-            <a href="#">Work on features that are on the roadmap</a>
+            <a href="https://github.com/mhs/scout-app/issues">Fix Existing Bugs</a>
+            <a href="https://github.com/TheJaredWilcurt/scout-app/blob/Scout-App-2-Dev/documentation/contributing.md">Work on features that are on the roadmap</a>
         </div>
     </footer>
     <script src="_scripts/main.js"></script>
