Update placeholder video

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="half">
                 <!-- Placeholder video -->
-                <iframe src="https://www.youtube-nocookie.com/embed/NpEaa2P7qZI?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/iaEZbyCH_Sw?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </section>
     </main>
