Added manually compressed SVG version of logo

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <header>
-        <img src="_img/wordmark.png" alt="Scout-App 2 Logo" />
+        <img src="_img/scout-app-logo.svg" alt="Scout-App 2 Logo" />
     </header>
     <main>
         <section>
