Added rough draft of Quotes section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <img src="_img/scout-app-logo.svg" alt="Scout-App 2 Logo" />
     </header>
     <main>
+
         <section>
             <div class="half">
                 <h1>Sass for Web Designers</h1>
@@ -80,6 +81,23 @@
                 <iframe src="https://www.youtube-nocookie.com/embed/iaEZbyCH_Sw?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </section>
+
+        <section id="quotes">
+            <h3>Scout-App is recommended by:</h3>
+            <ul>
+              <li>The official Sass Language website</li>
+              <li><cite>John W. Long, Managing Editor of TheSassWay.com</cite> &mdash; <q>Making it easier to use Sass.</q></li>
+              <li><cite>A List Apart</cite> &mdash; <q>A fast and easy way to work with Sass.</q></li>
+              <li><cite>Mashable</cite> &mdash; <q>Manage your projects effortlessly. Scout does all the heavy lifting.</q></li>
+              <li><cite>noeticforce</cite> &mdash; <q>Scout comes to the rescue and takes all the pain away. I love Scout and recommend to everyone.</q></li>
+              <li><cite>Impressive Webs</cite> &mdash; <q>Dead simple to get started preprocessing.</q></li>
+              <li><cite>Web Resources Depot</cite> &mdash; <q>Allows anyone to make use of Sass without the complexity of the command line.</q></li>
+              <li><cite>Template Monster</cite> &mdash; <q>Scout-App delivers more control, organization, and optimization to web designers, making their CSS workflow a snap.</q></li>
+              <li><cite>OS Training</cite> &mdash; <q>If you are looking for free software to compile your Sass, this is a great option.</q></li>
+              <li><cite>Johnstonian Era</cite> &mdash; <q>It’s crazy simple to use.</q></li>
+            </ul>
+        </section>
+
     </main>
     <footer>
         <div>
