started tech stack section

--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@
             </ul>
         </section>
 
+        <section>
+            Scout-App was made with:
+
+            The Node-Sass engine.
+
+            The Universal GUI Library/Framework
+
+            The NW.js Cross-Platform Runtime Environment
+        </section>
+
     </main>
     <footer>
         <div>
