Added comparison table

--- a/index.html
+++ b/index.html
@@ -82,6 +82,82 @@
             </div>
         </section>
 
+        <section id="whatsnew">
+            <h1>What's New in Scout-App</h1>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Scout Comparison</th>
+                        <th>2012 (0.7.1)</th>
+                        <th>2016 (2.0.3)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Sass Version</td>
+                        <td>2012 (Ruby)</td>
+                        <td>2016 (SassC)</td>
+                    </tr>
+                    <tr>
+                        <td>Technology</td>
+                        <td>Air, Java, Ruby</td>
+                        <td>NW.js, Node</td>
+                    </tr>
+                    <tr>
+                        <td>Cross-Platform</td>
+                        <td>OSX, Windows</td>
+                        <td>Windows, Linux, OSX</td>
+                    </tr>
+                    <tr>
+                        <td>Syntax Support</td>
+                        <td>scss and sass</td>
+                        <td>scss and sass</td>
+                    </tr>
+                    <tr>
+                        <td>Compass Support</td>
+                        <td>Full Support</td>
+                        <td>Only Mixins</td>
+                    </tr>
+                    <tr>
+                        <td>Speed</td>
+                        <td>Potato</td>
+                        <td>Kitten with a Jetpack</td>
+                    </tr>
+                    <tr>
+                        <td>Project Setup</td>
+                        <td>Manual</td>
+                        <td>Automatic &amp; Manual</td>
+                    </tr>
+                    <tr>
+                        <td>Themes</td>
+                        <td>1</td>
+                        <td>19 + Create your own</td>
+                    </tr>
+                    <tr>
+                        <td>Alerts &amp; Errors</td>
+                        <td>Console logs</td>
+                        <td>Human Readable in UI</td>
+                    </tr>
+                    <tr>
+                        <td>Run from Tray</td>
+                        <td>No</td>
+                        <td>Planned</td>
+                    </tr>
+                    <tr>
+                        <td>Custom Mixin Libraries</td>
+                        <td>No</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr>
+                        <td>Languages</td>
+                        <td>English</td>
+                        <td>English, Dutch, French, Russian, <a href="/TheJaredWilcurt/scout-app/blob/Scout-App-2-Dev/documentation/translate-scout.md">contribute more</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
         <section id="quotes">
             <h3>Scout-App is recommended by:</h3>
             <ul>
