Added Zorin Screenshots. Worked on slideshow

--- a/index.html
+++ b/index.html
@@ -151,33 +151,37 @@
             </table>
         </section>
 
-        <section>
+        <section id="screenshots">
             <div class="half">
+                Windows
+                Ubuntu
+                Zorin
+                OSX
             </div>
             <div class="half slick">
-                <div><img data-lazy="_img/screenshots/win7/01.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/02.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/03.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/04.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/05.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/06.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/07.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/08.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/09.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/10.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/11.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/12.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/13.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/14.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/15.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/16.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/17.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/18.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/19.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/20.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/21.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/22.png" /><p>Some text</p></div>
-                <div><img data-lazy="_img/screenshots/win7/23.png" /><p>Some text</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/01.png" /><p>First Time User Experience</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/02.png" /><p>English</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/03.png" /><p>Dutch</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/04.png" /><p>French</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/05.png" /><p>Russian</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/06.png" /><p>Theme: Cerulean</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/07.png" /><p>Theme: Classic</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/08.png" /><p>Theme: Cosmo</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/09.png" /><p>Theme: Cyborg</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/10.png" /><p>Theme: Darkly</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/11.png" /><p>Theme: Flatly</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/12.png" /><p>Theme: Journal</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/13.png" /><p>Theme: Lumen</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/14.png" /><p>Theme: Paper</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/15.png" /><p>Theme: Readable</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/16.png" /><p>Theme: Sandstone</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/17.png" /><p>Theme: Slate</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/18.png" /><p>Theme: Spacelab</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/19.png" /><p>Theme: Superhero</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/20.png" /><p>Theme: United</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/21.png" /><p>Theme: Yeti</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/22.png" /><p>Status of All Projects</p></div>
+                <div><img data-lazy="_img/screenshots/zorin/23.png" /><p>Dev Tools are always accessible</p></div>
             </div>
         </section>
 
@@ -246,7 +250,8 @@
             slidesToScroll: 1,
             dots: true,
             centerMode: true,
-            focusOnSelect: true
+            focusOnSelect: true,
+            fade: true
         });
     </script>
 </body>
