Basic screenshot abstraction and icons interaction

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <div class="half">
+            <div class="half bgblack">
                 <!-- Placeholder video -->
                 <iframe src="https://www.youtube-nocookie.com/embed/iaEZbyCH_Sw?rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
@@ -151,37 +151,39 @@
             </table>
         </section>
 
-        <section id="screenshots">
+        <section id="screenshots" class="bgwhite">
             <div class="half">
-                Windows
-                Ubuntu
-                Zorin
-                OSX
+                <img src="_img/logo-win.svg"    alt="Windows" title="Windows" data-os="win"    class="win"    />
+                <img src="_img/logo-ubuntu.svg" alt="Ubuntu"  title="Ubuntu"  data-os="ubuntu" class="ubuntu" />
+                <img src="_img/logo-zorin.svg"  alt="Zorin"   title="Zorin"   data-os="zorin"  class="zorin"  />
+                <img src="_img/logo-osx.svg"    alt="OSX"     title="OSX"     data-os="osx"    class="osx"    />
             </div>
             <div class="half slick">
-                <div><img data-lazy="_img/screenshots/zorin/01.png" /><p>First Time User Experience</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/02.png" /><p>English</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/03.png" /><p>Dutch</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/04.png" /><p>French</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/05.png" /><p>Russian</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/06.png" /><p>Theme: Cerulean</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/07.png" /><p>Theme: Classic</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/08.png" /><p>Theme: Cosmo</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/09.png" /><p>Theme: Cyborg</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/10.png" /><p>Theme: Darkly</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/11.png" /><p>Theme: Flatly</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/12.png" /><p>Theme: Journal</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/13.png" /><p>Theme: Lumen</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/14.png" /><p>Theme: Paper</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/15.png" /><p>Theme: Readable</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/16.png" /><p>Theme: Sandstone</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/17.png" /><p>Theme: Slate</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/18.png" /><p>Theme: Spacelab</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/19.png" /><p>Theme: Superhero</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/20.png" /><p>Theme: United</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/21.png" /><p>Theme: Yeti</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/22.png" /><p>Status of All Projects</p></div>
-                <div><img data-lazy="_img/screenshots/zorin/23.png" /><p>Dev Tools are always accessible</p></div>
+                <!--
+                    <div><img data-lazy="_img/screenshots/zorin/01.png" /><p>First Time User Experience</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/02.png" /><p>English</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/03.png" /><p>Dutch</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/04.png" /><p>French</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/05.png" /><p>Russian</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/06.png" /><p>Theme: Cerulean</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/07.png" /><p>Theme: Classic</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/08.png" /><p>Theme: Cosmo</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/09.png" /><p>Theme: Cyborg</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/10.png" /><p>Theme: Darkly</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/11.png" /><p>Theme: Flatly</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/12.png" /><p>Theme: Journal</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/13.png" /><p>Theme: Lumen</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/14.png" /><p>Theme: Paper</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/15.png" /><p>Theme: Readable</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/16.png" /><p>Theme: Sandstone</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/17.png" /><p>Theme: Slate</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/18.png" /><p>Theme: Spacelab</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/19.png" /><p>Theme: Superhero</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/20.png" /><p>Theme: United</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/21.png" /><p>Theme: Yeti</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/22.png" /><p>Status of All Projects</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/23.png" /><p>Dev Tools are always accessible</p></div>
+                -->
             </div>
         </section>
 
@@ -243,16 +245,5 @@
     </script> <!-- Load local jQuery if Google CDN is unreachable -->
     <script type="text/javascript" src="_scripts/ven.slick.min.js"></script>
     <script src="_scripts/main.js"></script>
-    <script type="text/javascript">
-        $('.slick').slick({
-            lazyLoad: 'ondemand',
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            dots: true,
-            centerMode: true,
-            focusOnSelect: true,
-            fade: true
-        });
-    </script>
 </body>
 </html>
