Added Contributors section, Cleaned up Sass

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <main>
 
-        <section>
+        <section id="downloads-and-video" class="bgbrownsugarketchup">
             <div class="half">
                 <h1>Sass for Web Designers</h1>
                 <hr />
@@ -75,7 +75,7 @@
             </div>
         </section>
 
-        <section id="whatsnew">
+        <section id="whatsnew" class="bgpuppybase">
             <h1>What's New in Scout-App</h1>
 
             <table>
@@ -153,6 +153,8 @@
 
         <section id="screenshots" class="bgwhite">
             <div class="half">
+                <h1>Screenshots</h1>
+                <p>Scout-App runs on many different operation systems. Click a logo above to see screenshots from some of the supported OS's.</p>
                 <img src="_img/logo-win.svg"    alt="Windows" title="Windows" data-os="win"    class="win"    />
                 <img src="_img/logo-ubuntu.svg" alt="Ubuntu"  title="Ubuntu"  data-os="ubuntu" class="ubuntu" />
                 <img src="_img/logo-zorin.svg"  alt="Zorin"   title="Zorin"   data-os="zorin"  class="zorin"  />
@@ -203,31 +205,67 @@
             </ul>
         </section>
 
-        <section>
-            Scout-App was made with:
+        <section id="contributors" class="bgmustard">
+            <div class="full">
+                <h3 class="textketchup">Contributors</h3>
+                <p>As an open source project, Scout-App could not exist without the support and contributions of </p>
+            </div>
+            <div class="half">
+                <h4>Scout-App 2 Development</h4>
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="half">
+                <h4>Scout-App 2 Website</h4>
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="half">
+                <h4>Scout-App 2 Translators</h4>
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="half">
+                <h4>Scout-App 1</h4>
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+        </section>
 
-            The Node-Sass engine.
-
-            The Universal GUI Library/Framework
-
-            The NW.js Cross-Platform Runtime Environment
+        <section id="technology" class="bgbrownsugarketchup">
+            <div class="full">
+                <h2 class="textpuppybase">Scout-App was made with:</h2>
+            </div>
+            <div class="thirds textpuppyspot">
+                The Node-Sass engine.
+            </div>
+            <div class="thirds textpuppyspot">
+                The Universal GUI Library/Framework
+            </div>
+            <div class="thirds textpuppyspot">
+                The NW.js Cross-Platform Runtime Environment
+            </div>
         </section>
 
     </main>
     <footer>
         <div>
-            <h3>Additional Links</h3>
+            <h4>Additional Links</h4>
             <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Alternate Downloads</a>
             <a href="https://gitter.im/TheJaredWilcurt/scout-app">Support Chat</a>
             <a href="https://github.com/TheJaredWilcurt/scout-app">GitHub</a>
         </div>
         <div>
-            <h3>Ideas and Issues</h3>
+            <h4>Ideas and Issues</h4>
             <a href="https://github.com/mhs/scout-app/issues/new?title=SA2%20-%20&body=OS%3A%20%0DInformation%20from%20Dev%20Tools%3A%20%0D%0D%28Attach%20screenshot%20below%29">Report Bugs</a>
             <a href="https://github.com/mhs/scout-app/issues/new?title=SA2%20Feature%20Request%20-%20">Request Features</a>
         </div>
         <div>
-            <h3>Contribute</h3>
+            <h4>Contribute</h4>
             <a href="https://github.com/TheJaredWilcurt/scout-app/blob/Scout-App-2-Dev/documentation/translate-scout.md">Translate Scout-App</a>
             <a href="https://www.youtube.com/watch?v=DtEVIDvBrSI" target="_blank">Create a Theme</a>
             <a href="https://github.com/mhs/scout-app/issues">Fix Existing Bugs</a>
@@ -239,7 +277,7 @@
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
     <script type="text/javascript">
-    if (typeof jQuery == 'undefined') {
+      if (typeof jQuery == 'undefined') {
           document.write(unescape("%3Cscript src='_scripts/jquery-2.2.3.min.js' type='text/javascript'%3E%3C/script%3E"));
       }
     </script> <!-- Load local jQuery if Google CDN is unreachable -->
